--- a/index.html
+++ b/index.html
@@ -15,138 +15,152 @@
 </head>
 
 <body>
-    <div class="main_container">
-        <header>
-            <div class="header_wrap">
-                <div>
-                    <div class="navb">
-                        <ul>
-                            <li><a href="#" id="buy">Buy</a></li>
-                            <li><a href="#">Rent</a></li>
-                            <li><a href="#">Commercial</a></li>
-                            <li><a href="#">On Sale</a></li>
-                        </ul>
+    <div>
+        <div class="main_container">
+            <header>
+                <div class="header_wrap">
+                    <div>
+                        <div class="navb">
+                            <ul>
+                                <li><a href="#" id="buy">Buy</a></li>
+                                <li><a href="#">Rent</a></li>
+                                <li><a href="#">Commercial</a></li>
+                                <li><a href="#">On Sale</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
-        <main>
-            <div class="inside_content">
-                <section>
-                    <div class="main_cards">
-                        <div class="cards">
-                            <img src="./images/location.svg" alt="Logo" title="Logo">
-                            <span>
-                                City or destination
+            </header>
+            <main>
+                <div class="main_content">
+                    <section>
+                        <div class="main_cards">
+                            <div class="cards">
+                                <img src="./images/location.svg" alt="Location Logo" title="Location Logo">
+                                <span>
+                                    City or destination
+                                </span>
+                            </div>
+                            <div class="cards">
+                                <img src="./images/booking.svg" alt="Booking Logo" title="Booking Logo">
+                                <span>
+                                    Booking Dates
+                                </span>
+                            </div>
+                            <div class="cards">
+                                <img src="./images/guests.svg" alt="Guests Logo" title="Guests Logo">
+                                <span>
+                                    Guest & rooms
+                                </span>
+                            </div>
+                            <div class="search_logo">
+                                <a href="#">
+                                    <img src="./images/search.svg" alt="Search Logo" title="Search Logo">
+                                </a>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="main_cards house_wrap">
+                            <img src="./images/main_image.png" alt="House Image" title="House Image">
+                            <span class="description">
+                                You will have everything nearby supermarket, buses, stations, cinemas, theaters, the
+                                carmen
+                                neighborhood, etc.
                             </span>
                         </div>
-                        <div class="cards">
-                            <img src="./images/booking.svg" alt="Logo" title="Logo">
+                    </section>
+                    <section>
+                        <div id="section3" class="main_cards">
+                            <div class="section3">
+                                <span>Display Total Price</span>
+                                <span>Includes all fees, before taxes </span>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="main_cards section4">
+                            <span>YHA Snowdon Pen-y-Pass</span>
                             <span>
-                                Booking Dates
+                                Nestled at the foot of Mount Snowdon, the highest mountain in Wales, this hostel has a
+                                rich
+                                history tied to mountaineering and the great outdoors. Originally built as a coach inn
+                                in
+                                the late 1800s, it served travelers journeying through the rugged terrain of Snowdonia.
+                                What makes Pen-y-Pass special is its role in outdoor culture. Over the decades, it
+                                became a
+                                base for legendary climbers who tackled the Snowdon Horseshoe—a challenging circuit of
+                                ridges—and contributed to the development of modern mountaineering in the UK.
                             </span>
                         </div>
-                        <div class="cards">
-                            <img src="./images/guests.svg" alt="Logo" title="Logo">
+                    </section>
+                    <section>
+                        <div class="main_cards section5">
                             <span>
-                                Guest & rooms
+                                Located in a beautifully preserved Victorian mansion built in 1885, the HI Sacramento
+                                Hostel
+                                offers a glimpse into the grandeur of California's past. Originally the home of a
+                                wealthy
+                                gold prospector, the mansion later became a boarding house and eventually a hostel. Its
+                                elegant architecture, complete with stained glass windows, carved wooden staircases, and
+                                period furnishings, makes it a unique blend of history and hospitality.
+                            </span>
+                            <span>
+                                HI Sacramento Hostel (Sacramento, USA)
                             </span>
                         </div>
-                        <div class="search_logo">
-                            <img src="./images/search.svg" alt="Search Logo" title="Logo">
+                    </section>
+                    <section>
+                        <div class="main_cards section6">
+                            <span>
+                                Clink78 Hostel (London, UK)
+                            </span>
+                            <span>
+                                Once a courthouse in the heart of London, Clink78 Hostel is steeped in history. Built in
+                                the
+                                19th century, the building was where Charles Dickens worked as a court reporter,
+                                inspiring
+                                elements of his famous novel Oliver Twist. In the 20th century, it served as a
+                                magistrates'
+                                court and famously hosted trials for punk bands like The Clash. Today, the hostel
+                                preserves
+                                its legal heritage—guests can stay in refurbished prison cells and relax in the
+                                courtroom-turned-lounge.
+                            </span>
                         </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="main_cards house_wrap">
-                        <img src="./images/main_image.png" alt="House Image" title="Image">
-                        <span class="description">
-                            You will have everything nearby supermarket, buses, stations, cinemas, theaters, the carmen
-                            neighborhood, etc.
-                        </span>
-                    </div>
-                </section>
-                <section>
-                    <div id="section3" class="main_cards">
-                        <div class="section3">
-                            <span>Display Total Price</span>
-                            <span>Includes all fees, before taxes </span>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="main_cards section4">
-                        <span>YHA Snowdon Pen-y-Pass</span>
-                        <span>
-                            Nestled at the foot of Mount Snowdon, the highest mountain in Wales, this hostel has a rich
-                            history tied to mountaineering and the great outdoors. Originally built as a coach inn in
-                            the late 1800s, it served travelers journeying through the rugged terrain of Snowdonia.
-                            What makes Pen-y-Pass special is its role in outdoor culture. Over the decades, it became a
-                            base for legendary climbers who tackled the Snowdon Horseshoe—a challenging circuit of
-                            ridges—and contributed to the development of modern mountaineering in the UK.
-                        </span>
-                    </div>
-                </section>
-                <section>
-                    <div class="main_cards section5">
-                        <span>
-                            Located in a beautifully preserved Victorian mansion built in 1885, the HI Sacramento Hostel
-                            offers a glimpse into the grandeur of California's past. Originally the home of a wealthy
-                            gold prospector, the mansion later became a boarding house and eventually a hostel. Its
-                            elegant architecture, complete with stained glass windows, carved wooden staircases, and
-                            period furnishings, makes it a unique blend of history and hospitality.
-                        </span>
-                        <span>
-                            HI Sacramento Hostel (Sacramento, USA)
-                        </span>
-                    </div>
-                </section>
-                <section>
-                    <div class="main_cards section6">
-                        <span>
-                            Clink78 Hostel (London, UK)
-                        </span>
-                        <span>
-                            Once a courthouse in the heart of London, Clink78 Hostel is steeped in history. Built in the
-                            19th century, the building was where Charles Dickens worked as a court reporter, inspiring
-                            elements of his famous novel Oliver Twist. In the 20th century, it served as a magistrates'
-                            court and famously hosted trials for punk bands like The Clash. Today, the hostel preserves
-                            its legal heritage—guests can stay in refurbished prison cells and relax in the
-                            courtroom-turned-lounge.
-                        </span>
-                    </div>
-                </section>
-            </div>
-        </main>
-        <footer>
-            <section class="footer_section">
-                <div class="main_cards footer_wrap">
-                    <div class="footer_logos">
-                        <a href="https://x.com/" target="_blank">
-                            <img src="./images/x.svg" alt="X Logo" class="footer_logos_wrap" >
-                        </a>
-                        <a href="https://www.linkedin.com/" target="_blank">
-                            <img src="./images/linkdin.svg" alt="Linkedin Logo" class="footer_logos_wrap">
-                        </a>
-                        <a href="https://www.facebook.com/" target="_blank">
-                            <img src="./images/facebook.svg" alt="Facebook Logo" class="footer_logos_wrap">
-                        </a>
-                        <a href="https://github.com/" target="_blank">
-                            <img src="./images/github.svg" alt="Github Logo" class="footer_logos_wrap">
-                        </a>
-                        <a href="https://www.angellist.com/" target="_blank">
-                            <img src="./images/angellist.svg" alt="AngelList Logo" class="footer_logos_wrap">
-                        </a>
-                        <a href="https://dribbble.com/" target="_blank">
-                            <img src="./images/dribbble.svg" alt="Dribbble Logo" class="footer_logos_wrap">
-                        </a>
-                        <a href="https://layers.to/" target="_blank">
-                            <img src="./images/layers.svg" alt="Layers Logo" class="footer_logos_wrap">
-                        </a>
-                    </div>
+                    </section>
                 </div>
-            </section>
-        </footer>
+            </main>
+            <footer>
+                <section class="footer_section">
+                    <div class="main_cards footer_wrap">
+                        <div class="footer_logos">
+                            <a href="https://x.com/" target="_blank">
+                                <img src="./images/x.svg" alt="X Logo" class="footer_logos_wrap">
+                            </a>
+                            <a href="https://www.linkedin.com/" target="_blank">
+                                <img src="./images/linkdin.svg" alt="Linkedin Logo" class="footer_logos_wrap">
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <img src="./images/facebook.svg" alt="Facebook Logo" class="footer_logos_wrap">
+                            </a>
+                            <a href="https://github.com/" target="_blank">
+                                <img src="./images/github.svg" alt="Github Logo" class="footer_logos_wrap">
+                            </a>
+                            <a href="https://www.angellist.com/" target="_blank">
+                                <img src="./images/angellist.svg" alt="AngelList Logo" class="footer_logos_wrap">
+                            </a>
+                            <a href="https://dribbble.com/" target="_blank">
+                                <img src="./images/dribbble.svg" alt="Dribbble Logo" class="footer_logos_wrap">
+                            </a>
+                            <a href="https://layers.to/" target="_blank">
+                                <img src="./images/layers.svg" alt="Layers Logo" class="footer_logos_wrap">
+                            </a>
+                        </div>
+                    </div>
+                </section>
+            </footer>
+        </div>
     </div>
 </body>
 
